--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-  "version": 2,
-  "projects": {
-    "rootDirectory": "frontend"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
+  "buildCommand": "cd frontend && npm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && npm install",
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  },
-  "rewrites": []
+  ]
 }
