--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,9 +18,8 @@ jobs:
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        working-directory: ./frontend
         run: |
-          vercel --token $VERCEL_TOKEN --prod --confirm
+          vercel --token $VERCEL_TOKEN --prod --yes frontend/
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
