--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: Deploy to Vercel
         run: |
-          vercel --token $VERCEL_TOKEN --prod --yes frontend/
+          cd frontend
+          vercel --token $VERCEL_TOKEN --prod --yes
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
