--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,9 +18,7 @@ jobs:
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        run: |
-          cd frontend
-          vercel --token $VERCEL_TOKEN --prod --yes
+        run: vercel frontend --token $VERCEL_TOKEN --prod --yes
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
