--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "Backend API for Restaurant Management System",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node scripts/seed.js"
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js",
+  "seed": "node src/scripts/seed.js"
   },
   "keywords": ["restaurant", "management", "api"],
   "author": "",
