--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
   "start": "node src/server.js",
   "dev": "nodemon src/server.js",
-  "seed": "node src/scripts/seed.js"
+  "seed": "node src/scripts/seed.js",
+  "test": "jest --runInBand"
   },
   "keywords": ["restaurant", "management", "api"],
   "author": "",
@@ -20,6 +21,8 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "jest": "^29.0.0",
+    "supertest": "^6.3.3"
   }
 }
