--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API for Restaurant Management System",
   "main": "server.js",
   "scripts": {
-  "start": "node src/server.js",
-  "dev": "nodemon src/server.js",
+  "start": "node server.js",
+  "dev": "nodemon server.js",
   "seed": "node src/scripts/seed.js",
   "test": "jest --runInBand"
   },
