Adjust frontend APIs to get base url dynamically

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,13 @@
 # Frontend API Configuration
 # Copy this file to .env.local and update values as needed
 
-# Backend API base URL
-VITE_API_URL=http://localhost:5000/api/v1
+# Backend API base URL (all API endpoints including uploads)
+# If not set, it will be dynamically detected from the current server
+VITE_API_BASE_URL=http://localhost:5000/api/v1
+
+# Base URL for image serving (optional, used for image uploads)
+# If not set, it will be dynamically detected from the current server
+VITE_BASE_URL=http://localhost:5000
 
 # Optional: API timeout in milliseconds
 VITE_API_TIMEOUT=10000
